Adjusted popularity stars to avoid number wrapping

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,7 +36,7 @@ article {
 }
 
 .popularity {
-  text-align: center;
+  text-align: right;
 
   .star {
     color:yellow;
